[package]
name = "p-dispersion"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.108"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.benchmark]
inherits = "release"
debug = true